# mediahub

./: .gitignore  README.md  index.html  next.config.js  package-lock.json  package.json  run-media-hub.cmd  tailwind.config.cjs  tmp_spotify.txt  tsconfig.json
src-tauri/: 2  Cargo.toml  media_hub.db  tauri.conf.json
src-tauri/capabilities/: main-capability.json  opener.json
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  discord.rs  mod.rs  player.rs  shikimori.rs  soundcloud.rs  spotify.rs
src-tauri/src/models/: anime.rs  mod.rs  track.rs
src-tauri/src/services/: auth.rs  database.rs  mod.rs  player.rs
src-tauri/target2/: .rustc_info.json
src-tauri/target2/debug/.fingerprint/adler2-48a685ef75be83e1/: lib-adler2  lib-adler2.json
src-tauri/target2/debug/.fingerprint/ahash-2ee71eebdb35dd43/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target2/debug/.fingerprint/ahash-383b33d033177f65/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target2/debug/.fingerprint/aho-corasick-8df94fdb2f3958df/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target2/debug/.fingerprint/alloc-no-stdlib-062a3783035b107f/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target2/debug/.fingerprint/alloc-stdlib-31debdbf70cff662/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target2/debug/.fingerprint/anyhow-294ee02e23beeaaa/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target2/debug/.fingerprint/anyhow-407480eec81b2c3f/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target2/debug/.fingerprint/anyhow-8e0e99ca1de13da5/: lib-anyhow  lib-anyhow.json
src-tauri/target2/debug/.fingerprint/async-trait-62f20e9e0791935e/: lib-async_trait  (+1 more)
(+649 files in other folders)
