[package]
name = "media-hub"
version = "0.1.0"
edition = "2021"
description = "Cross-platform media manager built with Tauri and Rust"
authors = ["Alex Kr"]

# ✅ Эта секция убирает предупреждение package.metadata does not exist
[package.metadata.tauri]
icon = ["icons/icon.ico"]

[dependencies]
tauri = { version = "2.9.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rodio = "0.17"
oauth2 = "5.0.0"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0.17"
tokio-postgres = "0.7"
tauri-plugin-log = "2.7.1"
serde_urlencoded = "0.7"
dotenvy = "0.15"
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
